2009-12-01  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs: added "Uninstall shortcut"

* win32/setup/asap-dialog.jpg, win32/setup/asap-banner.jpg:
  optimized using "jhead -purejpg"


2009-11-30  Piotr Fusik  <fox@scene.pl>
* CREDITS, win32/setup/asap.wxs, win32/setup/asap-dialog.jpg,
  win32/setup/asap-banner.jpg, win32/Makefile: setup graphics by Pawel Szewczyk


2009-11-29  Piotr Fusik  <fox@scene.pl>
* asap.c: reject native modules which load in $d000-$d7ff
  - e.g. simply_tune.tm8 from Grayscale site


2009-11-27  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs: WASAP icon on desktop


2009-11-26  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs: shortcuts in the Programs menu


2009-11-25  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs, win32/setup/wix_mutex.pl:
  setting multiple "Associate files" was possible with "Change"

* win32/setup/asap.wxs: file associations didn't appear in Winamp
  nor Apollo settings


2009-11-18  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs, win32/setup/license.rtf, win32/setup/wix_mutex.pl,
  win32/Makefile: started implementing file associations; GUI improvements


2009-11-16  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs: default selection and directories for plugins


2009-11-12  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs, win32/setup/license.rtf, win32/Makefile:
  added license to the setup


2009-11-06  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs: support upgrades and prevent downgrades


2009-10-28  Piotr Fusik  <fox@scene.pl>
* INSTALL, README, javascript/USAGE, win32/Makefile:
  JavaScript and Flash build and usage instructions


2009-10-06  Piotr Fusik  <fox@scene.pl>
* raw2c.pl, files2anylang.pl, anylang.h, asap.c, Makefile, players/Makefile,
  win32/Makefile, flash/Makefile, javascript/Makefile, javascript/asap.ppjs,
  csharp/Makefile: support native formats in JavaScript and Flash

* anylang.h, asap.c, acpu.c, apokeysnd.c, flash/ASAP.ppas, flash/PokeyState.as,